objects/NVMContactWorld__Settings__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__Flags__c</fullName>
        <inlineHelpText>Optional control flags</inlineHelpText>
        <label>Flags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__baseURL__c</fullName>
        <inlineHelpText>URL used to access ContactWorld API.  Please ensure that it is in the list of allowed Remote Sites.</inlineHelpText>
        <label>Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__callTimeOutMS__c</fullName>
        <defaultValue>20000</defaultValue>
        <inlineHelpText>API call time out time in milliseconds</inlineHelpText>
        <label>Call Time Out (ms)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__clientId__c</fullName>
        <inlineHelpText>Client Id</inlineHelpText>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__clientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>